# env-template

./: Cargo.toml  README.md
src/: main.rs
testfiles/: .env  all_env.txt  file_only.txt
