[package]
name = "env-template"
version = "0.1.0"
authors = ["Daniel Imfeld <daniel@imfeld.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
dotenv = "0.15.0"
handlebars = "3.5.4"
structopt = "0.3.21"

[dev-dependencies]
assert_matches = "1.5.0"
