[package]
name = "env-template"
version = "0.1.1"
description = "Render Handlebars template files using environment variables"
authors = ["Daniel Imfeld <daniel@imfeld.dev>"]
repository = "https://github.com/dimfeld/env-template"
license = "MIT OR Apache-2.0"
edition = "2018"
keywords = ["template"]
categories = ["command-line-utilities", "template-engine"]

[dependencies]
anyhow = "1.0.40"
dotenv = "0.15.0"
handlebars = "3.5.4"
structopt = "0.3.21"

[dev-dependencies]
assert_matches = "1.5.0"
